--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,7 @@
-<h1>jorgergherson </h1>
+<doctype html>
+    <html>
+        <head>
+            <Jorge R. Gherson> </Jorge R. Gherson>
+        </head>
+        <body>
+    </html>
