--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,6 @@
             <Jorge R. Gherson> </Jorge R. Gherson>
         </head>
         <body>
+            <h1> Welcome to my personal website.</h1>
+        </body>
     </html>
