--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <doctype html>
-    <html>
+    <html lang = "en">
         <head>
-            <Jorge R. Gherson> </Jorge R. Gherson>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <link rel="stylesheet" href="styles.css">
+            <link rel="icon" href="favicon.ico">
+            <script src="script.js" defer></script>
+            <title>Jorge R. Gherson</title>
         </head>
         <body>
-            <h1> Welcome to my personal website.</h1>
-            
+            <div class = "container">
+                <h1>Welcome to my personal website</h1>
+            </div>
         </body>
     </html>
