--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <link rel="stylesheet" href="styles.css">
-            <link rel="icon" href="favicon.ico">
-            <script src="script.js" defer></script>
+            <link rel="stylesheet" href="style.css">
             <title>Jorge R. Gherson</title>
         </head>
         <body>
